--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ body {
 @media only screen and (max-width: 600px) {
   .image-grid {
     flex-direction: column;
+    align-items: center;
   }
   .optional {
     display: none; 
