--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 * {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  color: black;
+  color: white;
+}
+
+.navbar {
+  height: 60px;
 }
 
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
@@ -10,21 +14,24 @@
 }
 
 .active {
-  color: #223140 !important;
+  color: white !important;
+}
+
+.bg-dark, .info {
+  background-color: #2c3a4a!important;
 }
 
 .bg-dark {
-  background-color: 
-  #394e63!important;
+  opacity: 85%;
 }
 
 .info {
+  color: white;
   text-align: center;
   border: 1px solid grey;
   border-radius: 15px;
   width: 33vw;
   padding: 1rem;
-  background-color: #33475c; /* #5e81a6; */
   margin: 1rem;
   opacity: 85%;
 }
@@ -36,8 +43,8 @@
 }
 
 a {
-  color: #115cd6 !important;
-  font-weight: bold;
+  color: white !important;
+  opacity: 100%!important;
  /* text-decoration: underline; */
 }
 
