--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,17 @@
   color: white;
 }
 
-.navbar {
-  height: 60px;
+html {
+  height: 75%;
 }
 
-.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-  color: 
-  #379472
-  ;
+body {
+  height: 100%;
+  background-color: #2c3a4a!important;
+}
+
+.navbar {
+  height: 60px;
 }
 
 .fixed-bottom {
@@ -31,29 +34,55 @@
   align-items: center;
 }
 
+.nav-link:hover {
+  border: solid grey 2px;
+  border-radius: 5px;
+}
+
 .active {
   border: 1px solid white;
   border-radius: 5px;
 }
 
 .bg-dark, .info {
-  background-color: #2c3a4a!important;
+  background-color: #0f141a!important;
+  /* background-color: #2c3a4a!important; */
+}
+
+.info {
+  font-size: 2rem; 
+  color: white;
+  border: 1px solid grey;
+  border-radius: 15px;
+  max-width: 50vw;
+  padding: 1rem;
+  opacity: 85%;
+  max-height: 80vh;
+}
+
+.mid-tagline {
+  margin-left: 10rem;
+}
+
+.last-tagline {
+  margin-left: 15rem;
 }
 
 .bg-dark {
   opacity: 85%;
 }
 
-.info {
-  font-size: 1.5rem; 
-  color: white;
-  text-align: center;
-  border: 1px solid grey;
-  border-radius: 15px;
-  width: 33vw;
-  padding: 1rem;
-  margin: 1rem;
-  opacity: 85%;
+.navbar-collapse {
+  background-color: #0f141a!important;
+  opacity: 100%!important;
+  z-index: 10;
+  display: flex;
+  align-content: center;
+  border-radius: 0 0 10px 10px;
+}
+
+.navbar-brand {
+  padding: 0;
 }
 
 hr {
@@ -61,6 +90,7 @@ hr {
 }
 
 .main-view {
+  margin: 2rem;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -87,24 +117,8 @@ a {
   max-width: 30rem;
 }
 
-.square-image:hover {
-  border: solid grey 2px;
-}
-
-.profile:hover {
-  border: none;
-}
-
 .profile {
   border-radius: 15px 0 0 15px;
-}
-
-html {
-  height: 75%;
-}
-
-body {
-  height: 100%;
 }
 
 .image-grid {
@@ -119,7 +133,10 @@ body {
   /* border: solid red 5px; */
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
+  html {
+    height: 85%;
+  }
   .image-grid {
     flex-direction: column;
     align-items: center;
@@ -132,7 +149,18 @@ body {
   }
   .info {
     width: auto;
-    max-width: 33vh;
+    max-width: 50vh;
+    max-height: 100vh; /* TODO: Fix mobile view */
+  }
+  .bg-dark {
+    opacity: 100%;
+  }
+  .mid-tagline {
+    margin-left: 0;
+  }
+  
+  .last-tagline {
+    margin-left: 0;
   }   
 }
 
@@ -142,7 +170,7 @@ body {
   width: 100vw;
   z-index: -100;
   filter: grayscale(30%);
-  opacity: 0.70;
+  opacity: 0.2;
 }
 
 .navbar-dark .navbar-nav .nav-link {
