--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@ html {
 
 body {
   height: 100%;
-  background-color: #2c3a4a!important;
+  /* background-color: #00244D!important; */
+  background-color: #001F42!important;
 }
 
 .navbar {
@@ -49,8 +50,11 @@ body {
   /* background-color: #2c3a4a!important; */
 }
 
-.info {
+.info-header {
   font-size: 2rem; 
+}
+
+.info {
   color: white;
   border: 1px solid grey;
   border-radius: 15px;
@@ -58,14 +62,37 @@ body {
   padding: 1rem;
   opacity: 85%;
   max-height: 80vh;
+  padding: 5rem;
+}
+
+.button-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.large-button {
+  font-size: 2rem;
+  background-color: #002D61;
+  border-radius: 10px;
+  padding: 1rem 5rem 1rem 5rem;
+  border: 0.1px solid #4590E6;
+}
+
+.large-button:hover {
+  text-decoration: none;
+  border: none;
+  background-color: #004594;
 }
 
 .mid-tagline {
-  margin-left: 10rem;
+  margin-left: 5rem;
+  margin-top: 3rem;
 }
 
 .last-tagline {
-  margin-left: 15rem;
+  margin-left: 10rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .bg-dark {
@@ -83,10 +110,6 @@ body {
 
 .navbar-brand {
   padding: 0;
-}
-
-hr {
-  border-top: 1px solid white;
 }
 
 .main-view {
@@ -137,6 +160,9 @@ a {
   html {
     height: 85%;
   }
+  .main-view {
+    margin: 0;
+  }
   .image-grid {
     flex-direction: column;
     align-items: center;
@@ -144,13 +170,12 @@ a {
   .optional {
     display: none; 
   }
-  .square-image {
-    margin-top: 1rem;
-  }
   .info {
+    text-align: center;
     width: auto;
     max-width: 50vh;
     max-height: 100vh; /* TODO: Fix mobile view */
+    padding: 1rem;
   }
   .bg-dark {
     opacity: 100%;
@@ -161,7 +186,17 @@ a {
   
   .last-tagline {
     margin-left: 0;
+  }
+  .large-button {
+    padding: 1rem;
   }   
+}
+
+@media all and (orientation: landscape) {
+  .info {
+    max-width: 100vh;
+    height: auto;
+  }
 }
 
 .background-image {
@@ -169,8 +204,7 @@ a {
   height: 100vh;
   width: 100vw;
   z-index: -100;
-  filter: grayscale(30%);
-  opacity: 0.2;
+  opacity: 0.1;
 }
 
 .navbar-dark .navbar-nav .nav-link {
