Add color scheme key to top of styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+
+/*Color scheme
+primary: #001F42
+dark: #0f141a
+light-primary: #002D61
+light-secondary: #004594
+*/
+
 * {
   font-family:Arial, Helvetica, sans-serif;
   color: white;
