--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,12 @@ a {
   /* border: solid red 5px; */
 }
 
+@media only screen and (min-width: 901px) {
+  .mobile-only {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 900px) {
   html {
     height: 85%;
@@ -183,7 +189,7 @@ a {
     display: none; 
   }
   .info {
-    text-align: center;
+    /* text-align: center; */
     width: auto;
     max-width: 50vh;
     max-height: 100vh; /* TODO: Fix mobile view */
@@ -206,7 +212,7 @@ a {
 
 @media all and (orientation: landscape) {
   .info {
-    max-width: 100vh;
+    max-width: 40rem;
     height: auto;
   }
 }
