--- a/css/styles.css
+++ b/css/styles.css
@@ -145,15 +145,20 @@ body {
   align-items: center;
 }
 
-a {
+a:not(.nav-item) {
   color: #3e83D0;
 }
+
+/* a:not(.nav-item):visited {
+  color: #3321ff;
+} */
 
 .nav-item > a:not(.grey-link) {
   color: white !important;
   opacity: 100%!important;
   text-decoration: none;
 }
+
 
 .button-wrapper > a {
   color: white !important;
@@ -205,7 +210,7 @@ a {
     flex-direction: column;
     align-items: center;
   }
-  .optional {
+  .fullscreen {
     display: none; 
   }
   .info {
