--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ body {
   color: white;
   border: 1px solid grey;
   border-radius: 15px;
-  width: 40vw;
+  width: 45vw;
   padding: 1rem;
   opacity: 85%;
   max-height: 75vh;
@@ -138,10 +138,9 @@ body {
 }
 
 .main-view {
-  /* height: 100vh; */
+  padding: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -204,7 +203,7 @@ a:not(.nav-item) {
 
 @media only screen and (max-width: 900px) {
   .main-view {
-    padding: 1rem;
+    padding: 2rem;
   }
   .image-grid {
     flex-direction: column;
@@ -253,11 +252,11 @@ a:not(.nav-item) {
   font-family:Arial, Helvetica, sans-serif;
 }
 
-.header {
+/* .header {
   display: flex;
   justify-content: center;
   margin: 1rem;
-}
+} */
 
 .footer-text {
   color: gray!important;
