--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,17 @@ body {
   padding: 0;
 }
 
+.grid-view {
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.grid-image {
+  width: 33%;
+  height: 33%;
+}
+
 .main-view {
   padding: 2rem;
   display: flex;
@@ -203,11 +214,14 @@ a:not(.nav-item) {
 
 @media only screen and (max-width: 900px) {
   .main-view {
+    height: auto;
     padding: 2rem;
   }
-  .image-grid {
+  .grid-view {
     flex-direction: column;
-    align-items: center;
+  }
+  .grid-image {
+    width: 100%;
   }
   .fullscreen {
     display: none; 
