--- a/css/styles.css
+++ b/css/styles.css
@@ -57,9 +57,8 @@ body {
   border-radius: 5px;
 }
 
-.bg-dark, .info {
+.bg-dark, .info, .info-column {
   background-color: #0f141a!important;
-  /* background-color: #2c3a4a!important; */
 }
 
 .info-header {
@@ -73,11 +72,15 @@ body {
   color: white;
   border: 1px solid grey;
   border-radius: 15px;
-  width: 45vw;
+  width: 40vw;
   padding: 1rem;
   opacity: 85%;
-  max-height: 75vh;
+  /* max-height: 75vh; */
   padding: 5rem;
+}
+
+.float-right {
+  float: right;
 }
 
 .vertical-center {
@@ -159,10 +162,6 @@ a:not(.nav-item) {
   color: #3e83D0;
 }
 
-/* a:not(.nav-item):visited {
-  color: #3321ff;
-} */
-
 .nav-item > a:not(.grey-link) {
   color: white !important;
   opacity: 100%!important;
@@ -194,18 +193,6 @@ a:not(.nav-item) {
   border-radius: 15px 0 0 15px;
 }
 
-.image-grid {
-  width: 100%;
-  /* display: grid;
-  grid-template-columns: 1f 1f;
-  grid-template-areas: "first second"; */
-  display: flex;
-  justify-content: space-around;
-  margin-top: 2rem;
-  margin-top: 2rem;
-  /* border: solid red 5px; */
-}
-
 @media only screen and (min-width: 901px) {
   .mobile-only {
     display: none;
@@ -227,11 +214,9 @@ a:not(.nav-item) {
     display: none; 
   }
   .info {
-    /* text-align: center; */
     width: auto;
     max-width: 50vh;
     max-height: 80%;
-    /* max-height: 75%; TODO: Fix mobile view */
     padding: 1rem;
   }
   .bg-dark {
@@ -246,6 +231,9 @@ a:not(.nav-item) {
   }
   .large-button {
     padding: 1rem;
+  }
+  .footer-text {
+    padding-left: 0rem!important;
   }   
 }
 
@@ -274,6 +262,7 @@ a:not(.nav-item) {
 
 .footer-text {
   color: gray!important;
+  padding-left: 2rem;
 }
 
 .grey-link {
