Change flow, learn more button on home screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ body {
   border-radius: 5px;
 }
 
-.bg-dark, .info, .info-column {
+.bg-dark, .info, .info-small {
   background-color: #0f141a!important;
 }
 
@@ -77,6 +77,19 @@ body {
   opacity: 85%;
   /* max-height: 75vh; */
   padding: 5rem;
+}
+
+.info-small {
+  margin: 1rem;
+  font-size: 1rem;
+  color: white;
+  border: 1px solid grey;
+  border-radius: 15px;
+  width: 40vw;
+  padding: 1rem;
+  opacity: 85%;
+  /* max-height: 75vh; */
+  padding: 0.5rem 6rem;
 }
 
 .float-right {
