--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
   border-radius: 5px;
 }
 
-.bg-dark, .info, .info-small, .dropdown, .dropdown-menu, .dropdown-item {
+.bg-dark, .info, .info-small, .dropdown, .dropdown-menu, .dropdown-item, .collapse-icon, #tools-menu {
   background-color: #0f141a!important;
 }
 
@@ -76,6 +76,55 @@ body {
   font-size: 2rem; 
 }
 
+#tools-sidebar {
+  position: fixed;
+  z-index: 100;
+  display: flex;
+}
+
+#tools-menu {
+  z-index: 1000;
+  display: none;
+  text-align: center;
+  font-size: 1rem;
+  color: white;
+  border: 1px solid grey;
+  border-radius: 0 10px 10px 0;
+  width: 40vw;
+}
+
+#tools-menu > .navbar-nav > .nav-item {
+  width: 100%;
+}
+
+#calculator {
+  display: none;
+}
+
+.collapse-icon {
+  color: white!important;
+  text-align: center;
+  font-size: 1rem;
+  color: white;
+  border: 1px solid grey;
+  border-radius: 5px;
+  width: 2rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.display-rows {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+}
+
+#role-selector {
+  width: 10rem;
+}
+
 .info {
   margin: 1rem;
   font-size: 1rem;
@@ -85,14 +134,22 @@ body {
   width: 40vw;
   padding: 1rem;
   opacity: 85%;
-  /* max-height: 75vh; */
   padding: 5rem;
 }
+
 
 .light-theme {
   color: black;
   background-color: #A5AFBB;
   opacity: 85%;
+}
+
+.form-select {
+  color: black;
+}
+
+option {
+  color: black;
 }
 
 .light-theme > p {
@@ -121,6 +178,22 @@ body {
   justify-content: center;
 }
 
+.card {
+  color: black;
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 1rem;
+  box-shadow: 20px 20px 50px grey;
+}
+
+.card-text {
+  color: black;
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+}
+
 .large-button {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 2rem;
@@ -134,6 +207,7 @@ body {
   text-decoration: none;
   border: none;
   background-color: #004594;
+  cursor: pointer;
 }
 
 .mid-tagline {
@@ -154,7 +228,7 @@ body {
 .navbar-collapse {
   background-color: #0f141a!important;
   opacity: 100%!important;
-  z-index: 10;
+  z-index: 101;
   display: flex;
   align-content: center;
   border-radius: 0 0 10px 10px;
@@ -168,6 +242,10 @@ body {
   padding: 2rem;
   display: flex;
   align-items: center;
+}
+
+.black-text {
+  color: black;
 }
 
 .grid-image {
@@ -222,9 +300,29 @@ a:not(.nav-item) {
   border-radius: 15px 0 0 15px;
 }
 
+#tools-sidebar:hover {
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 901px) {
   .mobile-only {
     display: none;
+  }
+  #tools-sidebar:hover {
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  #tools-menu {
+    border-radius: 0 10px 10px 10px;
+  }
+  .card {
+    padding: 5rem;
+    margin: 3rem;
   }
 }
 
@@ -310,6 +408,10 @@ a:not(.nav-item) {
 .footer-text {
   color: gray!important;
   padding-left: 2rem;
+}
+
+.github-icon {
+  height: 2rem;
 }
 
 .grey-link {
