--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,12 @@ body {
   display: none;
 }
 
+#prob-results {
+  margin: 1rem 0;
+  color: black;
+  font-style: italic;
+}
+
 .collapse-icon {
   color: white!important;
   text-align: center;
@@ -304,18 +310,48 @@ a:not(.nav-item) {
   cursor: pointer;
 }
 
+.prob-selector {
+  display: flex;
+}
+
+.plus:hover {
+  cursor: pointer;
+}
+
+.incrementer {
+  padding: 0 0.5rem;
+  margin: 0 1rem;
+  background-color:  #0f141a;
+  opacity: 85%;
+  border-radius:5px;
+}
+
+#tools-sidebar:hover {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.plus {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 @media only screen and (min-width: 901px) {
   .mobile-only {
     display: none;
   }
   #tools-sidebar:hover {
     cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  }
+  .plus {
+    cursor: pointer;
   }
   #tools-menu {
     border-radius: 0 10px 10px 10px;
