--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,16 @@ a:not(.nav-item) {
   -ms-user-select: none;
   user-select: none;
 }
+
+.large-button {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .plus {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
