--- a/css/styles.css
+++ b/css/styles.css
@@ -344,10 +344,18 @@ a:not(.nav-item) {
   cursor: pointer;
 }
 
+.plus {
+  color: black;
+}
+
+#prob-card {
+  display: none;
+}
+
 .incrementer {
   padding: 0 0.5rem;
   margin: 0 1rem;
-  background-color:  #0f141a;
+  background-color:  #A5AFBB;
   opacity: 85%;
   border-radius:5px;
 }
