--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ body {
   width: 100%;
 }
 
+
 #prob-results {
   margin: 1rem 0;
   color: black;
@@ -354,6 +355,9 @@ a:not(.nav-item) {
   background-color:  #A5AFBB;
   opacity: 85%;
   border-radius:5px;
+  width: 2rem;
+  display: flex;
+  justify-content: center;
 }
 
 #roles {
