vanish tools box on click

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,14 @@ body {
   z-index: 100;
   display: flex;
 }
+.tools-item {
+  max-width: 90%;
+}
+
+.tools-nav {
+    display: flex;
+    align-items: center;
+}
 
 #tools-menu {
   z-index: 1000;
