--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ body {
   font-size: 1rem;
   color: white;
   border: 1px solid grey;
-  border-radius: 0 10px 10px 0;
+  border-radius: 0 10px 10px 10px;
   width: 40vw;
 }
 
